[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/BotaoCentralizarCam.gd" type="Script" id=1]
[ext_resource path="res://UI/ReloadProgressBar.gd" type="Script" id=2]
[ext_resource path="res://Btn_portal.gd" type="Script" id=3]
[ext_resource path="res://UI/icone-camera-centralizar.png" type="Texture" id=4]
[ext_resource path="res://UI/icone_btn_portal.png" type="Texture" id=5]
[ext_resource path="res://UI/GameInterface.gd" type="Script" id=6]
[ext_resource path="res://UI/Slow.png" type="Texture" id=7]
[ext_resource path="res://UI/Btn_slow.gd" type="Script" id=8]
[ext_resource path="res://fontes/upheavtt.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://UI/BarraUI.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 9 )

[node name="GameInterface" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 934.08, 45.2886 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="Control"]
position = Vector2( 934.316, 96.2886 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="Control"]
position = Vector2( 934.316, 147.289 )
texture = ExtResource( 10 )

[node name="LabelBullets" type="Label" parent="Control"]
margin_left = 816.08
margin_top = 35.7614
margin_right = 1012.08
margin_bottom = 53.7614
custom_fonts/font = SubResource( 1 )
text = "Place holder"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInim" type="Label" parent="Control"]
margin_left = 820.203
margin_top = 87.3895
margin_right = 1016.2
margin_bottom = 105.389
custom_fonts/font = SubResource( 1 )
text = "Place_holder"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTempo" type="Label" parent="Control"]
margin_left = 816.663
margin_top = 138.401
margin_right = 1012.66
margin_bottom = 156.401
custom_fonts/font = SubResource( 1 )
text = "Place holder"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tit_tempo" type="Label" parent="Control"]
margin_left = 756.786
margin_top = 138.047
margin_right = 952.786
margin_bottom = 156.047
custom_fonts/font = SubResource( 1 )
text = "Tempo:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 814.939
margin_top = 180.43
margin_right = 1014.94
margin_bottom = 194.43
max_value = 1.5
percent_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_centralizar" type="Button" parent="Control"]
margin_left = 968.0
margin_top = 560.0
margin_right = 1012.0
margin_bottom = 598.0
focus_mode = 0
toggle_mode = true
pressed = true
enabled_focus_mode = 0
icon = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_portal" type="Button" parent="Control"]
margin_left = 912.973
margin_top = 559.633
margin_right = 956.973
margin_bottom = 597.633
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_slow" type="Button" parent="Control"]
margin_left = 854.288
margin_top = 560.573
margin_right = 898.288
margin_bottom = 598.573
icon = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
